# aviation-questions

./: .dockerignore  CLAUDE.md  Makefile  README.md  env.example  pyproject.toml
.agents/skills/fastapi-templates/: SKILL.md
.agents/skills/sqlalchemy-orm/: SKILL.md
.claude/skills/fastapi-templates/: SKILL.md
.claude/skills/logfire/: SKILL.md
.claude/skills/python-testing-patterns/: SKILL.md
src/: main.py  settings.py
src/core/: base_dao.py  dependencies.py  embedding.py  engine.py  models.py  s3.py
src/documents/: chunker.py  constants.py  dao.py  enums.py  models.py  odt_parser.py  router.py  schemas.py  service.py
src/migrations/: env.py
src/migrations/versions/: 2026_03_02_1159-5a2aabd35dfc_.py  2026_03_02_1203-e974f2b62ef9_change_language_column_from_string_to_.py  2026_03_07_1637-6a0fb3f723d4_.py  2026_03_15_1200-3b8d5f1c2a11_add_question_threading_columns.py
src/questions/: constants.py  dao.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/core/: test_embedding.py
tests/documents/: conftest.py  test_upload.py
tests/questions/: conftest.py  test_agent.py  test_router.py  test_service.py
